# rover_2025

./: .gitignore  frames_2025-03-10_20.40.33.gv  frames_2025-03-10_21.09.58.gv  frames_2025-03-17_15.51.03.gv
install/: local_setup.sh  setup.sh
install/ros_gz_example_application/lib/ros_gz_example_application/: skid_controller.py
install/ros_gz_example_application/share/ros_gz_example_application/: package.sh
install/ros_gz_example_bringup/share/ros_gz_example_bringup/: local_setup.sh  package.sh
install/ros_gz_example_bringup/share/ros_gz_example_bringup/config/: diff_drive.rviz  ros_gz_example_bridge.yaml
install/ros_gz_example_bringup/share/ros_gz_example_bringup/launch/: diff_drive.launch.py
install/ros_gz_example_description/share/ros_gz_example_description/: package.sh
install/ros_gz_example_description/share/ros_gz_example_description/environment/: ros_gz_example_description.dsv
install/ros_gz_example_gazebo/share/ros_gz_example_gazebo/: local_setup.sh  package.sh
install/ros_gz_example_gazebo/share/ros_gz_example_gazebo/worlds/: diff_drive.sdf
log/: latest_build
src/: template_workspace.yaml
src/ros_gz_project_template/ros_gz_example_application/: CMakeLists.txt  package.xml
src/ros_gz_project_template/ros_gz_example_application/scripts/: skid_controller.py
src/ros_gz_project_template/ros_gz_example_bringup/launch/: diff_drive.launch.py
src/ros_gz_project_template/ros_gz_example_description/models/diff_drive/: rover_model.urdf
src/ros_gz_project_template/ros_gz_example_gazebo/worlds/: garden.sdf
(+1 files in other folders)
